Doing better normalization for scattering transform, and adding code to do 2DFTM for comparison

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pyMIRBasic"]
 	path = pyMIRBasic
 	url = https://github.com/ctralie/pyMIRBasic.git
+[submodule "ExternalLibs/LargeScaleCoverSongId"]
+	path = ExternalLibs/LargeScaleCoverSongId
+	url = https://github.com/urinieto/LargeScaleCoverSongId.git
